new course added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <a href="https://quizizz.com/join?gc=13948916" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-                <hr>
+<!-- horizontal line break -->
+                <hr>   
                 <div class="topic">
                     <p>2. Indian_train_system_journy</p>
                     <div class="topic-links">
@@ -62,6 +63,7 @@
                         <a href="https://quizizz.com/join?gc=58415092" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
@@ -72,6 +74,7 @@
                         <a href="https://quizizz.com/join?gc=24303604" target="_blank" rel="noopener noreferrer">Play</a>
                     </div> 
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
@@ -82,6 +85,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>5. प्रथम विश्व युद्ध (First World War)</p>
@@ -92,6 +96,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>6. प्रथम विश्व युद्ध (First World War)</p>
@@ -102,6 +107,7 @@
                         <a href="https://quizizz.com/join?gc=22730740" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>7. पारिभाषिक शब्द</p>
@@ -112,6 +118,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>8. वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
@@ -122,8 +129,9 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
-                <div class="topic" style="display: none;">
+                <div class="topic">
                     <p>9. CSIR National Aerospace Laboratories भर्ती</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing"
@@ -132,16 +140,18 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
-                <div class="topic" style="display: none;">
-                    <p>Topic name</p>
+                <div class="topic">
+                    <p>10. बिहार डीएलएड परीक्षा_ विज्ञान एवं अंग्रेज़ी</p>
                     <div class="topic-links">
-                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
+                        <a href="https://drive.google.com/file/d/1d4VCJBFUdz8n414CbJbDDAfNufc8M17o/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic" style="display: none;">
                     <p>Topic name</p>
@@ -151,6 +161,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
+<!-- horizontal line break -->
                 <hr>
                 <div class="topic" style="display: none;">
                     <p>Topic name</p>
@@ -170,6 +181,7 @@
                 <p>Math question for revision</p>
             </div>
             <div class="topics-container">
+<!-- top horizontal line -->
                 <hr class="hr-top">
                 <div class="topic">
                     <p>1. गणित संशोधन भाग 16_ महत्वपूर्ण प्रश्नावली</p>
