--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
                     </div>
                 </div>
                 <hr>
-                <div class="topic" style="display: none;">
-                    <p>Topic name</p>
+                <div class="topic">
+                    <p>पारिभाषिक शब्द (Technical Terms)</p>
                     <div class="topic-links">
-                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://github.com/ZipTripp/7pi/blob/0cac26d48152c0bfa251f1068cb7e05da6268756/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf" target="_blank" rel="noopener noreferrer">Notes</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
