--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- google font -->
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <!-- google icon -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=download" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=download" />
 
 </head>
 
@@ -31,10 +38,13 @@
     <div class="test subject-container">
         <h3>Prectics Test</h3>
         <ul>
-            <li>Full Test &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
+            <li>Full Test
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button>
+            </li>
             <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
             <li>GK-GS (Small Test) &nbsp;&nbsp;<button>Upcomming...</button></li>
-        </ul> </div>
+        </ul>
+    </div>
     <div class="box">
         <div>
             <div class="subject-container">
@@ -49,21 +59,23 @@
                         <a href="https://drive.google.com/file/d/1jVVz1VIkQfIp507oggzIZOiTjxRxo_nb/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/3cmqTjt6apkEF7cMA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="https://quizizz.com/join?gc=13948916" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=13948916" target="_blank"
+                            rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
-                <hr>   
+                <!-- horizontal line break -->
+                <hr>
                 <div class="topic">
                     <p>2. Indian_train_system_journy</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1W_IMW-kF0TbKh9cBf6eH_bDZvttqe1VO/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/KsKqJVj3GkGB2fq96" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="https://quizizz.com/join?gc=58415092" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=58415092" target="_blank"
+                            rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>3. इतिहास, भूगोल, अर्थशास्त्र, सामान्य ज्ञान (GK-GS)</p>
@@ -71,10 +83,11 @@
                         <a href="https://drive.google.com/file/d/1ybXi4fFEshspjQMz6E5TKP8SBt7_qkX-/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/h9mqMpVDZVwvoNPLA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="https://quizizz.com/join?gc=24303604" target="_blank" rel="noopener noreferrer">Play</a>
-                    </div> 
+                        <a href="https://quizizz.com/join?gc=24303604" target="_blank"
+                            rel="noopener noreferrer">Play</a>
+                    </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>4. पृथ्वी सम्मेलन (Earth Summit), एजेंडा 21</p>
@@ -85,7 +98,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>5. प्रथम विश्व युद्ध (First World War)</p>
@@ -96,7 +109,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>6. प्रथम विश्व युद्ध (First World War)</p>
@@ -104,10 +117,11 @@
                         <a href="https://drive.google.com/file/d/1N7MO21JUANL83xJIuKjv1cBd8Lnfucmy/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="https://quizizz.com/join?gc=22730740" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://quizizz.com/join?gc=22730740" target="_blank"
+                            rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>7. पारिभाषिक शब्द</p>
@@ -118,7 +132,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>8. वाक्य और उसके भेद (Vakya aur Uske Bhed)</p>
@@ -129,7 +143,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>9. CSIR National Aerospace Laboratories भर्ती</p>
@@ -140,7 +154,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
                     <p>10. बिहार डीएलएड परीक्षा_ विज्ञान एवं अंग्रेज़ी</p>
@@ -151,7 +165,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic" style="display: none;">
                     <p>Topic name</p>
@@ -161,7 +175,7 @@
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
-<!-- horizontal line break -->
+                <!-- horizontal line break -->
                 <hr>
                 <div class="topic" style="display: none;">
                     <p>Topic name</p>
@@ -181,12 +195,13 @@
                 <p>Math question for revision</p>
             </div>
             <div class="topics-container">
-<!-- top horizontal line -->
+                <!-- top horizontal line -->
                 <hr class="hr-top">
                 <div class="topic">
                     <p>1. गणित संशोधन भाग 16_ महत्वपूर्ण प्रश्नावली</p>
                     <div class="topic-links">
-                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/83EWdkViPV3e11fb7" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
@@ -224,16 +239,21 @@
                 <div class="topic">
                     <p>1. हिंदी प्रैक्टिस सेट - 24</p>
                     <div class="topic-links">
-                        <a href="https://drive.google.com/file/d/1JZFBwR5IdY0eAu5sDr-VKQla3V9lnXi0/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://drive.google.com/file/d/1JZFBwR5IdY0eAu5sDr-VKQla3V9lnXi0/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
                 <div class="topic">
-                    <p>पारिभाषिक शब्द (Technical Terms)</p>
+                    <p id="topic-i">2. पारिभाषिक शब्द (Technical Terms)</p>
+                    <span class="material-symbols-outlined">
+                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf" style="text-decoration: none;">download</a>
+                    </span>
                     <div class="topic-links">
-                        <a href="https://github.com/ZipTripp/7pi/blob/0cac26d48152c0bfa251f1068cb7e05da6268756/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf" target="_blank" rel="noopener noreferrer">Notes</a>
+                        <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf"
+                            target="_blank" rel="noopener noreferrer">View Notes</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
@@ -262,7 +282,7 @@
                 जा सके।
             </p>
         </div>
-            <p>&copy; 2025 Nirwair. All rights reserved.</p>
+        <p>&copy; 2025 Nirwair. All rights reserved.</p>
     </footer>
 </body>
 
