--- a/index.html
+++ b/index.html
@@ -207,12 +207,15 @@
                     </div>
                 </div>
                 <hr>
-                <div class="topic" style="display: none;">
-                    <p>Topic name</p>
+                <div class="topic">
+                    <p class="topic-i">Compound Interest (चक्रवृद्धि ब्याज)</p>
+                    <span class="material-symbols-outlined">
+                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link" style="text-decoration: none;">download</a>
+                    </span>
                     <div class="topic-links">
-                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes</a>
+                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Practices</a>
+                        <a  target="_blank" rel="noopener noreferrer">Quiz</a>
                     </div>
                 </div>
                 <hr>
@@ -247,7 +250,7 @@
                 </div>
                 <hr>
                 <div class="topic">
-                    <p id="topic-i">2. पारिभाषिक शब्द (Technical Terms)</p>
+                    <p class="topic-i">2. पारिभाषिक शब्द (Technical Terms)</p>
                     <span class="material-symbols-outlined">
                         <a href="https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf" style="text-decoration: none;">download</a>
                     </span>
