play link removed

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/GmarJqQpwhLrXkGdA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a   target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -106,7 +106,7 @@
                         <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a    target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -129,7 +129,7 @@
                         <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/F9EdQsixAkmciWW88" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a  target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -140,7 +140,7 @@
                         <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a  target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -151,7 +151,7 @@
                         <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a  target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -162,7 +162,7 @@
                         <a href="https://drive.google.com/file/d/1d4VCJBFUdz8n414CbJbDDAfNufc8M17o/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a  target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -203,10 +203,11 @@
                         <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/83EWdkViPV3e11fb7" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a  target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
+<!-- compound Interest] -->
                 <div class="topic">
                     <p class="topic-i">Compound Interest (चक्रवृद्धि ब्याज)</p>
                     <span class="material-symbols-outlined">
