non used link removed

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a  target="_blank" rel="noopener noreferrer">Play</a>
+                        <a       target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -150,8 +150,8 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a  target="_blank" rel="noopener noreferrer">Play</a>
+                        <a        target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a        target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -161,8 +161,8 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1d4VCJBFUdz8n414CbJbDDAfNufc8M17o/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a  target="_blank" rel="noopener noreferrer">Play</a>
+                        <a        target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a        target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -245,8 +245,8 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1JZFBwR5IdY0eAu5sDr-VKQla3V9lnXi0/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a         target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a         target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
@@ -258,8 +258,8 @@
                     <div class="topic-links">
                         <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf"
                             target="_blank" rel="noopener noreferrer">View Notes</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a          target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a          target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
