--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     <div class="test subject-container">
         <h3>Prectics Test</h3>
         <ul>
-            <li>Trial Test &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
+            <li> <strong>Trial Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
   Start Test<span class="new-badge"></span>
 </button>
 </li>
             <li>Full Test
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button>
             </li>
-            <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
-            <li>GK-GS (Small Test) &nbsp;&nbsp;<button>Upcomming...</button></li>
+            <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
+            <li>GK-GS (Small Test) <button>Upcomming...</button></li>
         </ul>
     </div>
     <div class="box">
