--- a/index.html
+++ b/index.html
@@ -278,6 +278,39 @@
                 <hr>
             </div>
         </div>
+        <!-- Miscellaneous subjects -->
+         <div>
+            <div class="subject-container">
+                <h3>Miscellaneous</h3>
+                <p>Two or more then two subjects mixed</p>
+            </div>
+            <div class="topics-container">
+                <hr class="hr-top">
+                <div class="topic">
+                    <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir</p>
+                    <span class="material-symbols-outlined">
+                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/f43cd50460589846cc4883418b37342e62d425f2/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%207%20_%20by%20Abadat%20Sir.pdf" style="text-decoration: none;">download</a>
+                    </span>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1GRWMsdD1Y5fn2LgWi5hp1oBnrpw3k17m/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">View Notes</a>
+                        <a          target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a          target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic" style="display: none;">
+                    <p>Topic name</p>
+                    <div class="topic-links">
+                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </div>
+
     </div>
     <footer>
         <div class="footer-para">
