--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
     <div class="test subject-container">
         <h3>Prectics Test</h3>
         <ul>
-            <li> <strong>Trial Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
-  Start Test<span class="new-badge"></span>
-</button>
-</li>
+            <li> <strong>Trial
+                    Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <button
+                    onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
+                    Start Test<span class="new-badge"></span>
+                </button>
+            </li>
             <li>Full Test
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button>
             </li>
@@ -99,7 +102,7 @@
                         <a href="https://drive.google.com/file/d/1dHTgWm-8qLqen4CsYUXLo9XkYriQpqA-/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/GmarJqQpwhLrXkGdA" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a   target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -110,7 +113,7 @@
                         <a href="https://drive.google.com/file/d/1dt9yNnfoW45scUR4bTLLaIsIsUmeBDPY/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/PaaMk9LqPAKgszvy9" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a    target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -133,7 +136,7 @@
                         <a href="https://drive.google.com/file/d/1MTr2JvRxE_doM-2JmlSfXYYgtGamY3yB/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/F9EdQsixAkmciWW88" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a  target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -144,7 +147,7 @@
                         <a href="https://drive.google.com/file/d/15eP-oV-Aem1fLU_-YbtvDZVzvTIhoBIp/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/L3SPJN8T2DbEPs1q8" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a       target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -154,8 +157,8 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1QCyDwWOQqELAtmKEL2oyzQn93q7bGn3c/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a        target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a        target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -165,8 +168,8 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1d4VCJBFUdz8n414CbJbDDAfNufc8M17o/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a        target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a        target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
@@ -207,27 +210,30 @@
                         <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=sharing"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a href="https://forms.gle/83EWdkViPV3e11fb7" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a  target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
-<!-- compound Interest] -->
+                <!-- compound Interest] -->
                 <div class="topic">
                     <p class="topic-i">Compound Interest (चक्रवृद्धि ब्याज)</p>
                     <span class="material-symbols-outlined">
-                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link" style="text-decoration: none;">download</a>
+                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link"
+                            style="text-decoration: none;">download</a>
                     </span>
                     <div class="topic-links">
-                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes</a>
-                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Practices</a>
-                        <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a href="https://drive.google.com/file/d/1eGE-_TXR6sM5cnSRIoJRDsa6ye4jW7qZ/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes</a>
+                        <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Practices</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
                     </div>
                 </div>
                 <hr>
-                <div class="topic" style="display: none;">
-                    <p>Topic name</p>
+                <div class="topic">
+                    <p>Compound Interest Part-2_AdityaRanjanSir</p>
                     <div class="topic-links">
-                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a href="https://drive.google.com/file/d/1VSW5_jfglPrGJGpBq61rW2S8W8u4bC_4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/Questions</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
                         <a href="" target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
@@ -249,21 +255,22 @@
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1JZFBwR5IdY0eAu5sDr-VKQla3V9lnXi0/view?usp=drive_link"
                             target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a         target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a         target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
                 <div class="topic">
                     <p class="topic-i">2. पारिभाषिक शब्द (Technical Terms)</p>
                     <span class="material-symbols-outlined">
-                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf" style="text-decoration: none;">download</a>
+                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf"
+                            style="text-decoration: none;">download</a>
                     </span>
                     <div class="topic-links">
                         <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/ZipTripp/7pi/main/files/%E0%A4%AA%E0%A4%BE%E0%A4%B0%E0%A4%BF%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B6%E0%A4%AC%E0%A5%8D%E0%A4%A6%20(Technical%20Terms)%20%E2%80%93%20%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A4%BE%E0%A4%B8%20%E0%A4%B8%E0%A4%BE%E0%A4%B0%E0%A4%BE%E0%A4%82%E0%A4%B6%20%E0%A4%8F%E0%A4%B5%20(1).pdf"
                             target="_blank" rel="noopener noreferrer">View Notes</a>
-                        <a          target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a          target="_blank" rel="noopener noreferrer">Play</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
@@ -279,7 +286,7 @@
             </div>
         </div>
         <!-- Miscellaneous subjects -->
-         <div>
+        <div>
             <div class="subject-container">
                 <h3>Miscellaneous</h3>
                 <p>Two or more then two subjects mixed</p>
@@ -289,13 +296,28 @@
                 <div class="topic">
                     <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir</p>
                     <span class="material-symbols-outlined">
-                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/f43cd50460589846cc4883418b37342e62d425f2/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%207%20_%20by%20Abadat%20Sir.pdf" style="text-decoration: none;">download</a>
+                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/f43cd50460589846cc4883418b37342e62d425f2/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%207%20_%20by%20Abadat%20Sir.pdf"
+                            style="text-decoration: none;">download</a>
                     </span>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1GRWMsdD1Y5fn2LgWi5hp1oBnrpw3k17m/view?usp=drive_link"
-                            target="_blank" rel="noopener noreferrer">View Notes</a>
-                        <a          target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a          target="_blank" rel="noopener noreferrer">Play</a>
+                            target="_blank" rel="noopener noreferrer">Notes/Questions</a>
+                        <a target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a target="_blank" rel="noopener noreferrer">Play</a>
+                    </div>
+                </div>
+                <hr>
+                <div class="topic">
+                    <p class="topic-i">2. विज्ञान+English Day 8_AbadatSir</p>
+                    <span class="material-symbols-outlined">
+                        <a href="https://raw.githubusercontent.com/ZipTripp/7pi/64c2086c4cbe40e3441f36c62c96c8d6ba725e0b/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%208_AbadatSir.pdf"
+                            style="text-decoration: none;">download</a>
+                    </span>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1_TNR_GKHuT7T4MUKImlNxhdeZ8ubVXQM/view?usp=drive_link"
+                            target="_blank" rel="noopener noreferrer">Notes/Questions</a>
+                        <a      target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a     target="_blank" rel="noopener noreferrer">Play</a>
                     </div>
                 </div>
                 <hr>
