compound interesrt Example added

--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                 </div>
                 <hr>
                 <div class="topic">
-                    <p>Compound Interest Part-2_AdityaRanjanSir</p>
+                    <p>चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1VSW5_jfglPrGJGpBq61rW2S8W8u4bC_4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/Questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://drive.google.com/file/d/1uSbYz6CJg6iygKIOuxcxneqBSRR1vaBa/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Examples</a>
+                        <a      target="_blank" rel="noopener noreferrer">Quiz</a>
                     </div>
                 </div>
                 <hr>
