--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <hr>
                 <!-- compound Interest] -->
                 <div class="topic">
-                    <p class="topic-i">Compound Interest (चक्रवृद्धि ब्याज)</p>
+                    <p class="topic-i">2. Compound Interest (चक्रवृद्धि ब्याज)</p>
                     <span class="material-symbols-outlined">
                         <a href="https://drive.google.com/file/d/1H8Guy8cdTSHz_IPIS5sygvyEXL-rt4TP/view?usp=drive_link"
                             style="text-decoration: none;">download</a>
@@ -231,7 +231,7 @@
                 </div>
                 <hr>
                 <div class="topic">
-                    <p>चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir</p>
+                    <p>3. चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir</p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1VSW5_jfglPrGJGpBq61rW2S8W8u4bC_4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/Questions</a>
                         <a href="https://drive.google.com/file/d/1uSbYz6CJg6iygKIOuxcxneqBSRR1vaBa/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Examples</a>
