new badge add test

--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
                     </div>
                 </div>
                 <hr>
+                <!-- New -->
                 <div class="topic">
-                    <p>3. चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir</p>
+                    <p>3. चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir <span class="new-badge">New</span></p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1VSW5_jfglPrGJGpBq61rW2S8W8u4bC_4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/Questions</a>
                         <a href="https://drive.google.com/file/d/1uSbYz6CJg6iygKIOuxcxneqBSRR1vaBa/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Examples</a>
@@ -293,8 +294,9 @@
             </div>
             <div class="topics-container">
                 <hr class="hr-top">
+                <!-- New -->
                 <div class="topic">
-                    <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir</p>
+                    <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir <span class="new-badge">New</span></p>
                     <span class="material-symbols-outlined">
                         <a href="https://raw.githubusercontent.com/ZipTripp/7pi/f43cd50460589846cc4883418b37342e62d425f2/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%207%20_%20by%20Abadat%20Sir.pdf"
                             style="text-decoration: none;">download</a>
@@ -307,8 +309,9 @@
                     </div>
                 </div>
                 <hr>
+                <!-- New -->
                 <div class="topic">
-                    <p class="topic-i">2. विज्ञान+English Day 8_AbadatSir</p>
+                    <p class="topic-i">2. विज्ञान+English Day 8_AbadatSir <span class="new-badge">New</span></p> 
                     <span class="material-symbols-outlined">
                         <a href="https://raw.githubusercontent.com/ZipTripp/7pi/64c2086c4cbe40e3441f36c62c96c8d6ba725e0b/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%208_AbadatSir.pdf"
                             style="text-decoration: none;">download</a>
