--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button
                     onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
-                    Start Test<span class="new-badge"></span>
+                    Start Test
                 </button>
             </li>
             <li>Full Test
@@ -232,7 +232,7 @@
                 <hr>
                 <!-- New -->
                 <div class="topic">
-                    <p>3. चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir <span class="new-badge">New</span></p>
+                    <p>3. चक्रवृद्धि ब्याज (Part-2) Aditya Ranjan Sir </p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1VSW5_jfglPrGJGpBq61rW2S8W8u4bC_4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/Questions</a>
                         <a href="https://drive.google.com/file/d/1uSbYz6CJg6iygKIOuxcxneqBSRR1vaBa/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Examples</a>
@@ -296,7 +296,7 @@
                 <hr class="hr-top">
                 <!-- New -->
                 <div class="topic">
-                    <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir <span class="new-badge">New</span></p>
+                    <p class="topic-i">1. विज्ञान+English Day 7_by Abadat Sir </p>
                     <span class="material-symbols-outlined">
                         <a href="https://raw.githubusercontent.com/ZipTripp/7pi/f43cd50460589846cc4883418b37342e62d425f2/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%207%20_%20by%20Abadat%20Sir.pdf"
                             style="text-decoration: none;">download</a>
@@ -310,8 +310,9 @@
                 </div>
                 <hr>
                 <!-- New -->
+                 <!-- <span class="new-badge">New</span> -->
                 <div class="topic">
-                    <p class="topic-i">2. विज्ञान+English Day 8_AbadatSir <span class="new-badge">New</span></p> 
+                    <p class="topic-i">2. विज्ञान+English Day 8_AbadatSir </p> 
                     <span class="material-symbols-outlined">
                         <a href="https://raw.githubusercontent.com/ZipTripp/7pi/64c2086c4cbe40e3441f36c62c96c8d6ba725e0b/files/%E0%A4%B5%E0%A4%BF%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%A8%2BEnglish%20Day%208_AbadatSir.pdf"
                             style="text-decoration: none;">download</a>
