--- a/index.html
+++ b/index.html
@@ -174,15 +174,35 @@
                 </div>
                 <!-- horizontal line break -->
                 <hr>
-                <div class="topic" style="display: none;">
-                    <p>Topic name</p>
+                <div class="topic">
+                    <p>सिंधु सभ्यता <span class="new-badge">New</span> </p>
                     <div class="topic-links">
-                        <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                        <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                        <a href="https://drive.google.com/file/d/1N3PR3cwVBkvNexpvjAZbB_fqgvWgOetv/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a     target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a      target="_blank" rel="noopener noreferrer">---</a>
                     </div>
                 </div>
                 <!-- horizontal line break -->
+                <hr>
+                <div class="topic" >
+                    <p>भारतीय संसद <span class="new-badge">New</span> </p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/10lvS3RTjjrGATeFNiC6FYYHcHtbFLQF4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a     target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a     target="_blank" rel="noopener noreferrer">---</a>
+                    </div>
+                </div>
+
+                <hr>
+                <div class="topic" >
+                    <p>भारत की सीमा रेखा और पड़ोसी देश <span class="new-badge">New</span> </p>
+                    <div class="topic-links">
+                        <a href="https://drive.google.com/file/d/1CGrIKr6Oz6ILejlTfDwkXJEtpEtYbCLt/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                        <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                        <a  target="_blank" rel="noopener noreferrer">---</a>
+                    </div>
+                </div>
+
                 <hr>
                 <div class="topic" style="display: none;">
                     <p>Topic name</p>
