--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <!-- horizontal line break -->
                 <hr>
                 <div class="topic">
-                    <p>सिंधु सभ्यता <span class="new-badge">New</span> </p>
+                    <p>11. सिंधु सभ्यता <span class="new-badge">New</span> </p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1N3PR3cwVBkvNexpvjAZbB_fqgvWgOetv/view?usp=sharing" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a     target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -185,7 +185,7 @@
                 <!-- horizontal line break -->
                 <hr>
                 <div class="topic" >
-                    <p>भारतीय संसद <span class="new-badge">New</span> </p>
+                    <p>12. भारतीय संसद <span class="new-badge">New</span> </p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/10lvS3RTjjrGATeFNiC6FYYHcHtbFLQF4/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a     target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -195,7 +195,7 @@
 
                 <hr>
                 <div class="topic" >
-                    <p>भारत की सीमा रेखा और पड़ोसी देश <span class="new-badge">New</span> </p>
+                    <p>13. भारत की सीमा रेखा और पड़ोसी देश <span class="new-badge">New</span> </p>
                     <div class="topic-links">
                         <a href="https://drive.google.com/file/d/1CGrIKr6Oz6ILejlTfDwkXJEtpEtYbCLt/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                         <a  target="_blank" rel="noopener noreferrer">Quiz</a>
