--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7pi_Algegras</title>
+    <title>7pi_Algebra</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +25,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=download" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=download" />
+    
+
 
 </head>
 
@@ -41,15 +43,18 @@
             <li> <strong>Trial
                     Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button
-                    onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=gn3682b36e344ead';">
-                    Start Test
+                    onclick="window.location.href;" style="background-color: gray;">
+                    Start Test 
                 </button>
             </li>
             <li>Full Test
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button>
             </li>
             <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
-            <li>GK-GS (Small Test) <button>Upcomming...</button></li>
+            <li>GK-GS (Small Test) <button
+                    onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=p47682c538269b9e';">
+                    Start Test <span class="new-badge"></span>
+                </button></li>
         </ul>
     </div>
     <div class="box">
