--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <!-- horizontal line break -->
                     <hr>
                     <div class="topic">
-                        <p>11. सिंधु सभ्यता <span class="new-badge">New</span> </p>
+                        <p>11. सिंधु सभ्यता  </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1N3PR3cwVBkvNexpvjAZbB_fqgvWgOetv/view?usp=sharing"
                                 target="_blank" rel="noopener noreferrer">Notes/All questions</a>
@@ -202,7 +202,7 @@
                     <!-- horizontal line break -->
                     <hr>
                     <div class="topic">
-                        <p>12. भारतीय संसद <span class="new-badge">New</span> </p>
+                        <p>12. भारतीय संसद</p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/10lvS3RTjjrGATeFNiC6FYYHcHtbFLQF4/view?usp=drive_link"
                                 target="_blank" rel="noopener noreferrer">Notes/All questions</a>
@@ -213,7 +213,7 @@
 
                     <hr>
                     <div class="topic">
-                        <p>13. भारत की सीमा रेखा और पड़ोसी देश <span class="new-badge">New</span> </p>
+                        <p>13. भारत की सीमा रेखा और पड़ोसी देश  </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1CGrIKr6Oz6ILejlTfDwkXJEtpEtYbCLt/view?usp=drive_link"
                                 target="_blank" rel="noopener noreferrer">Notes/All questions</a>
@@ -370,12 +370,39 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="topic">
+                        <p>3. विज्ञान+English Day7_Abadat Sir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/19zeppAVwKuiYxmg2Q-bvbcogOCtFaa2I/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic">
+                        <p>4. विज्ञान+english day14 _AbadatSir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1DOMr4femqEJL2SNFv7QHJ261XhieXn49/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic">
+                        <p>Sunday Mock test Science+English Abadat Sir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1y_VME6tg9k6-XtrJJA6OPEtHSmi4htp1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">All Questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
                     <div class="topic" style="display: none;">
                         <p>Topic name</p>
                         <div class="topic-links">
                             <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                            <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                            <a target="_blank" rel="noopener noreferrer">Play</a>
                         </div>
                     </div>
                     <hr>
