new course added

--- a/index.html
+++ b/index.html
@@ -223,12 +223,21 @@
                     </div>
 
                     <hr>
+                    <div class="topic">
+                        <p>14. *सामान्य ज्ञान Practice set _ Amitsir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/14w48OHMFVnQ-eZ9yRVKx3Ptxz4b9Hzww/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
                     <div class="topic" style="display: none;">
                         <p>Topic name</p>
                         <div class="topic-links">
                             <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
                         </div>
                     </div>
                 </div>
@@ -319,12 +328,87 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="topic">
+                        <p>Hindi Practice Set 25_Pavan Sir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1dC1QSW3fTTX3va6ZPHVF3KV_da-2q-0M/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic">
+                        <p>Hindi Practice Set 26_Pavan Sir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1c_yYUQ0jA9xdMUHFGe8kXFlTgDfQAUVh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
                     <div class="topic" style="display: none;">
                         <p>Topic name</p>
                         <div class="topic-links">
                             <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Quiz</a>
-                            <a href="" target="_blank" rel="noopener noreferrer">Play</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic" style="display: none;">
+                        <p>Topic name</p>
+                        <div class="topic-links">
+                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- new English class starting from here -->
+         <div>
+            <div class="subject-container">
+                <h3>English</h3>
+                <p>English for revision</p>
+                <div class="topics-container">
+                    <hr class="hr-top">
+                    <div class="topic">
+                        <p>1. English Practice Set_NageshSir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1eADMES-JvaIB6gZM20loD-NmTGn3jfUJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic">
+                        <p>2. English Practice Set(2)_Nagesh Sir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1ZOoV2LdL2-CzHb04roUc91C2g5PDgJ_C/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic" style="display: none;">
+                        <p>Topic name</p>
+                        <div class="topic-links">
+                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic" style="display: none;">
+                        <p>Topic name</p>
+                        <div class="topic-links">
+                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
                         </div>
                     </div>
                     <hr>
@@ -371,7 +455,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>3. विज्ञान+English Day7_Abadat Sir <span class="new-badge">New</span></p>
+                        <p>3. विज्ञान+English Day7_Abadat Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/19zeppAVwKuiYxmg2Q-bvbcogOCtFaa2I/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -380,7 +464,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>4. विज्ञान+english day14 _AbadatSir <span class="new-badge">New</span></p>
+                        <p>4. विज्ञान+english day14 _AbadatSir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1DOMr4femqEJL2SNFv7QHJ261XhieXn49/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">Quiz</a>
@@ -389,7 +473,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>Sunday Mock test Science+English Abadat Sir <span class="new-badge">New</span></p>
+                        <p>Sunday Mock test Science+English Abadat Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1y_VME6tg9k6-XtrJJA6OPEtHSmi4htp1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">All Questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
